...
        }
        
        repWeightPickerView.select(weight: trainingSet!.weight, animated: animated)
        repWeightPickerView.select(repetitions: Int(trainingSet!.repetitions), animated: animated)

        if trainingSet == currentSet {
            repWeightPickerView.button.setTitle("Complete Set", for: .normal)
        } else {
            repWeightPickerView.button.setTitle("Ok", for: .normal)
        }

        repWeightPickerView.show(pickerView: true, button: true, animated: animated)
    }
...
            let training = trainingExercise!.training!
            precondition(training.isCompleted!, "Attempt to finish uncompleted training")
            precondition(training.start != nil, "Attempt to finish training that has not started")
            training.end = Date()
            trainingDetailViewController.training = training
            trainingDetailViewController.alwaysShowEditingSections = true
            trainingDetailViewController.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Save", style: .plain, target: self, action: #selector(finishTraining))
        }
    }
    
    @objc
    private func finishTraining() {
        performSegue(withIdentifier: "finish training", sender: self)
...
    }
    
    private func createCompleteExerciseTitle() -> String? {
        if trainingExercise == nil { // should actually never happen
            return ""
        }
        return allOtherExercisesCompleted() ? "Finish Training" : "Next Exercise"
    }
    
    private func allOtherExercisesCompleted() -> Bool {
        guard let trainingExercise = trainingExercise else {
            return true
        }
...
