...
                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="49" id="sae-5u-NFy"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Start Training"/>
                                        <connections>
                                            <segue destination="X3d-Gd-7W1" kind="show" identifier="start new training" id="3zb-e6-bqh"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQn-oY-aWw">
                                        <rect key="frame" x="0.0" y="57" width="277" height="49"/>
...
            </objects>
            <point key="canvasLocation" x="5518" y="-1660"/>
        </scene>
        <!--TrainingDetailViewController-->
        <scene sceneID="1Q0-XI-A4S">
            <objects>
                <viewControllerPlaceholder storyboardIdentifier="training detail view controller" storyboardName="Profile" referencedIdentifier="TrainingDetailViewController" id="DXj-Tp-D37" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Gxf-2P-ynj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4662" y="-1660"/>
        </scene>
        <!--Current Training Exercise Page View Controller-->
        <scene sceneID="EGm-pa-cmO">
...
            <point key="canvasLocation" x="3865" y="-1252"/>
        </scene>
        <!--Training-->
        <scene sceneID="ghR-Yc-7TV">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ob1-FP-r6X" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Training" image="training" id="Maz-TI-QsM"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Usy-4I-R5r">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
